WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188486
CSS reference filter with feDisplacementMap shows buffer corruption on Retina displays
https://bugs.webkit.org/show_bug.cgi?id=188486
Summary
CSS reference filter with feDisplacementMap shows buffer corruption on Retina...
Simon Fraser (smfr)
Reported
2018-08-11 17:35:59 PDT
https://codepen.io/yoksel/pen/VBVRWa
Looks very wrong on Mac and iOS.
Attachments
Screenshot
(175.90 KB, image/png)
2018-08-11 17:37 PDT
,
Simon Fraser (smfr)
no flags
Details
Testcase
(1.02 KB, text/html)
2018-09-23 11:24 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(5.30 KB, patch)
2018-09-23 11:44 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-08-11 17:37:03 PDT
Created
attachment 346974
[details]
Screenshot
Radar WebKit Bug Importer
Comment 2
2018-08-11 17:37:25 PDT
<
rdar://problem/43189750
>
Simon Fraser (smfr)
Comment 3
2018-09-19 16:53:36 PDT
Only happens on Retina displays.
Simon Fraser (smfr)
Comment 4
2018-09-23 11:24:33 PDT
Created
attachment 350576
[details]
Testcase I think this is mostly about feDisplacementMap
Simon Fraser (smfr)
Comment 5
2018-09-23 11:44:29 PDT
Created
attachment 350577
[details]
Patch
WebKit Commit Bot
Comment 6
2018-09-24 11:20:33 PDT
Comment on
attachment 350577
[details]
Patch Clearing flags on attachment: 350577 Committed
r236415
: <
https://trac.webkit.org/changeset/236415
>
WebKit Commit Bot
Comment 7
2018-09-24 11:20:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug