CSS reference filter with feDisplacementMap shows buffer corruption on Retina displays https://bugs.webkit.org/show_bug.cgi?id=188486 <rdar://problem/43189750>

Reviewed by Dean Jackson.
Source/WebCore:

The paintSize needs to be scaled by filterScale on Retina displays.

Test: css3/filters/hidpi-feDisplacementMap.html

* platform/graphics/filters/FEDisplacementMap.cpp:
(WebCore::FEDisplacementMap::platformApplySoftware):
* platform/graphics/filters/FEDisplacementMap.h:

LayoutTests:

* css3/filters/hidpi-feDisplacementMap-expected.html: Added.
* css3/filters/hidpi-feDisplacementMap.html: Added.


Canonical link: https://commits.webkit.org/204867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236415 268f45cc-cd09-0410-ab3c-d52691b4dbfc